# s

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  compile.ps1
include/vulkan_helper/: Application.hpp
include/vulkan_helper/base/: config.hpp  exception.hpp  logger.hpp  pch.hpp  safe_array.hpp  vkh.hpp  vkh_base.hpp
include/vulkan_helper/core/: Core.hpp  Instance.hpp  LogicalDevice.hpp  PhysicalDeviceLoader.hpp  QueueFamilyIndices.hpp  ValidationLayer.hpp
include/vulkan_helper/engine/: Engine.hpp  SharedResource.hpp
include/vulkan_helper/handle/: CoreHandler.hpp  EngineHandler.hpp  Handler.hpp  WindowContextHandler.hpp
include/vulkan_helper/hash/: BoostHasher.hpp  DescriptorSetLayoutBuildTypeHasher.hpp  EnumHasher.hpp  PipelineLayoutBuilderHasher.hpp  PipelineLayoutManagerEquals.hpp  PointerDerefEquals.hpp  SamplerCreateInfoEquals.hpp  SamplerCreateInfoHasher.hpp  StringHasher.hpp  UniquePtrEquals.hpp  UniquePtrHasher.hpp  VariantHasher.hpp  VectorHasher.hpp
include/vulkan_helper/util/: BarrierUtils.hpp  BufferImageContextUtils.hpp  BufferImageUtils.hpp  Debugger.hpp  DescriptorUpdater.hpp  PhysicalDeviceUtils.hpp  SwapchainUtils.hpp
res/: resources.rc
shaders/: vk_2_map_iter_stripe.comp.spv  vk_bloom.frag.spv  vk_bloom_threshold.frag.spv  vk_box_blur.comp.spv  vk_color.frag.spv  vk_fog.frag.spv  vk_image_rgba2bgr.comp.spv  vk_iteration_palette.frag.spv  vk_linear_interpolation.frag.spv  vk_post_process.vert.spv  vk_resample.frag.spv  vk_slope.frag.spv  vk_static_2_image.frag.spv  vk_stripe.frag.spv
shdsrc/: vk_2_map_iter_stripe.comp  vk_bloom.frag  vk_bloom_threshold.frag  vk_box_blur.comp  vk_color.frag  vk_fog.frag  vk_image_rgba2bgr.comp  vk_iteration_palette.frag  vk_linear_interpolation.frag  vk_post_process.vert  vk_resample.frag  vk_slope.frag  vk_static_2_image.frag  vk_stripe.frag
src/rff2/bench/: MPATableBench.cpp
src/rff2/calc/: calculatable.hpp  complex.hpp  dex.h  dex_exp.h  dex_std.h  dex_trig.h  double_exp_math.h  fixed_point_complex.hpp  fixed_point_decimal.hpp  rff_math.h  spin_thread.hpp  spin_thread_pool.hpp
src/rff2/constants/: Constants.hpp  FileConstants.hpp  FractalConstants.hpp  NumConstants.hpp  StatusConstants.hpp  VideoConstants.hpp  VulkanWindowConstants.hpp  Win32Constants.hpp
src/rff2/data/: ApproxTableManager.h  GraphicsMatrixStagingBuffer.h  Matrix.h
src/rff2/formula/: MB2Perturbator.h  MB2Reference.h  MB2RenderData.hpp  Perturbator.h  Reference.hpp  SeriesApproximationData.hpp
src/rff2/io/: KFRColorLoader.cpp  KFRColorLoader.hpp  RFFBinary.cpp  RFFBinary.h  RFFDynamicMapBinary.cpp  RFFDynamicMapBinary.h  RFFLocationBinary.cpp  RFFLocationBinary.h  RFFStaticMapBinary.cpp  RFFStaticMapBinary.h
src/rff2/locator/: MB2Locator.cpp  MB2Locator.h
src/rff2/mem/: single_alloc_permitted_memory_resource.hpp
src/rff2/mrthy/: ArrayCompressionTool.h  ArrayCompressor.h  MPAPeriod.cpp  MPAPeriod.h  MPATable.h  PA.h  PAGenerator.h
src/rff2/parallel/: BackgroundThread.h  BackgroundThreads.h  ParallelArrayDispatcher.h  ParallelDispatcher.h  ParallelRenderState.cpp  ParallelRenderState.h
src/rff2/preset/: Presets.h
src/rff2/settings/: FractalSettings.h  FrtDecimalizeIterationMethod.h  FrtGeneralSettings.hpp  FrtMPACompressionMethod.h  FrtMPASelectionMethod.h  FrtMPASettings.h  FrtPerturbSettings.hpp  FrtReferenceCompSettings.h  FrtReferenceReuseMethod.h  FrtReferenceSettings.hpp  FrtReferenceSyncSettings.hpp  FrtSASettings.hpp  Settings.h  (+16 more)
src/vulkan_helper/: Application.cpp  CMakeLists.txt
src/vulkan_helper/core/: CMakeLists.txt  Core.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDeviceLoader.cpp  ValidationLayer.cpp
src/vulkan_helper/dependency/: CMakeLists.txt
src/vulkan_helper/engine/: CMakeLists.txt  Engine.cpp  SharedResource.cpp
src/vulkan_helper/engine/buffer/: BufferObject.cpp  CMakeLists.txt  IndexBuffer.cpp  ShaderStorage.cpp  Uniform.cpp  VertexBuffer.cpp
src/vulkan_helper/engine/cmd/: CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp
src/vulkan_helper/engine/configurator/: CMakeLists.txt  ComputePipelineConfigurator.cpp  GeneralGraphicsPipelineConfigurator.cpp  GeneralPostProcessGraphicsPipelineConfigurator.cpp
src/vulkan_helper/engine/context/: BufferContext.cpp  CMakeLists.txt  ImageContext.cpp  RenderContext.cpp  SharedImageContext.cpp  WindowContext.cpp
src/vulkan_helper/engine/descriptor/: CMakeLists.txt  Descriptor.cpp  DescriptorSetLayout.cpp
src/vulkan_helper/engine/executor/: CMakeLists.txt  RenderPassFullscreenRecorder.cpp  ScopedCommandBufferExecutor.cpp  ScopedNewCommandBufferExecutor.cpp
src/vulkan_helper/engine/graphics/: CMakeLists.txt  Framebuffer.cpp  RenderPass.cpp  Renderer.cpp
src/vulkan_helper/engine/manage/: CMakeLists.txt  DescriptorManager.cpp  HostDataObjectManager.cpp  PipelineLayoutManager.cpp  PipelineManager.cpp  RenderPassManager.cpp
src/vulkan_helper/engine/pipeline/: CMakeLists.txt  ComputeShaderPipeline.cpp  GraphicsPipeline.cpp  Pipeline.cpp  PipelineLayout.cpp  PushConstant.cpp  ShaderModule.cpp
src/vulkan_helper/engine/repo/: CMakeLists.txt  GlobalDescriptorSetLayoutRepo.cpp  GlobalPipelineLayoutRepo.cpp  GlobalSamplerRepo.cpp  GlobalShaderModuleRepo.cpp  WindowLocalDescriptorRepo.cpp
src/vulkan_helper/engine/sampler/: CMakeLists.txt  CombinedImageSampler.cpp  Sampler.cpp
src/vulkan_helper/engine/sync/: CMakeLists.txt  Fence.cpp  Semaphore.cpp  SyncObject.cpp
src/vulkan_helper/engine/window/: CMakeLists.txt  PlatformCheckboxMenuItemBase.cpp  PlatformMenuBase.cpp  PlatformMenuItemBase.cpp  PlatformWindowBase.cpp  Surface.cpp  Swapchain.cpp
src/vulkan_helper/engine/window/linux/: CMakeLists.txt  NativeWindow.cpp
src/vulkan_helper/engine/window/mac/: CMakeLists.txt  NativeWindow.cpp
src/vulkan_helper/engine/window/win/: CMakeLists.txt  NativeCheckboxMenuItem.cpp  NativeMenu.cpp  NativeMenuItem.cpp  NativeWindow.cpp
src/vulkan_helper/util/: BarrierUtils.cpp  BufferImageContextUtils.cpp  BufferImageUtils.cpp  CMakeLists.txt  Debugger.cpp  DescriptorUpdater.cpp  PhysicalDeviceUtils.cpp  SwapchainUtils.cpp
(+180 files in other folders)
